# vaughngl

./: CMakeLists.txt  README.md  example.cpp
examples/: example.cpp
examples/models/: pyramid.mtl
include/vaughngl/: GUI.h  Mesh.h  OBJMesh.h  vaughngl.h
src/: GUI.cpp  Mesh.cpp  OBJMesh.cpp
